fix: Row cls overflows so no more excess h space

--- a/css/custom_style.scss
+++ b/css/custom_style.scss
@@ -91,6 +91,10 @@ body {
 .row:before{
     content: "";
 }
+.row{
+    width: 100%;
+    overflow-x: auto;
+}
 .row:after{
     content: "";
     clear: both;
@@ -118,7 +122,7 @@ p {
 
 /* Backgrounds */
 .background-window {
-    height: 100dvh;
+    height: 100vh;
     width: 100%;
     overflow-y: auto;
     background-size: cover;
